--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-select": "3.1.2",
+    "@types/uuid": "^9.0.1",
     "axios": "0.21.1",
     "bootstrap": "5.1.3",
     "classnames": "^2.3.2",
+    "cors": "^2.8.5",
     "formik": "^2.2.9",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
@@ -32,6 +34,7 @@
     "reactstrap": "^9.1.6",
     "sass": "^1.58.3",
     "typescript": "^4.4.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0",
     "yup": "^1.0.2"
   },
@@ -42,8 +45,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
-    "prettier": "prettier 'src/**/*.{js,jsx,ts,tsx}' --write",
-    "db": "json-server --watch db.json"
+    "prettier": "prettier 'src/**/*.{js,jsx,ts,tsx}' --write"
   },
   "eslintConfig": {
     "extends": [
