--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-qr-code": "^2.0.11",
     "react-query": "^3.39.3",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.1",
