--- a/.env-cmdrc.json
+++ b/.env-cmdrc.json
@@ -5,7 +5,6 @@
     "BUILD_PATH": "./build",
     "CI": "false",
     "GENERATE_SOURCEMAP": "false",
-    "REACT_APP_API_ENDPOINT": "http://localhost:3000/",
-    "REACT_APP_STATIC_ENDPOINT": "https://www.dnd5eapi.co/api/"
+    "REACT_APP_API_ENDPOINT": "http://localhost:3000/"
   }
 }
